crates/ignis_driver/tests/snapshots/e2e_ok__closure_multiple_calls.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 51
stdout: (empty)
stderr: (empty)
