crates/ignis_driver/tests/snapshots/e2e_ok__defer_early_return_both_paths.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 28
stdout: (empty)
stderr: (empty)
