crates/ignis_driver/tests/snapshots/e2e_ok__defer_fn_end_void.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 19
stdout: (empty)
stderr: (empty)
