crates/ignis_driver/tests/snapshots/e2e_ok__diverging_initializer_panics_when_reached.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 101
stdout: (empty)
stderr: panic: init
