crates/ignis_driver/tests/snapshots/e2e_ok__drop_glue_explicit_custom.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: 3
stdout: (empty)
stderr: (empty)
