crates/ignis_driver/tests/snapshots/e2e_ok__drop_glue_multiple_strings.snap
---
source: crates/ignis_driver/tests/e2e_ok.rs
expression: "common::format_e2e_result(&result)"
---
exit_code: -1
stdout: (empty)
stderr: free(): double free detected in tcache 2
